@@ -1,0 +1,10 @@
+[report]
+omit =
+    /home/*/.buildout/eggs/*
+    /usr/*
+    bin/test
+    /home/travis/buildout-cache/eggs/*
+    /home/travis/virtualenv/*
+    eggs/*
+    parts/*
+
