@@ -1,0 +1,26 @@
+language: python
+python: 2.7
+sudo: false
+cache:
+  directories:
+  - eggs
+  - parts/node
+env:
+  matrix:
+    - PLONE_VERSION=4.3
+    - PLONE_VERSION=5.0
+    - PLONE_VERSION=5.1
+before_install:
+ - virtualenv .
+ - bin/pip install --upgrade pip setuptools zc.buildout
+ - if [ $PLONE_VERSION == 5.0 ]; then pip install --upgrade setuptools==21.0.0; fi
+install:
+ - sed -ie "s#test-4.3#test-$PLONE_VERSION#" buildout.cfg
+ - bin/buildout annotate
+ - bin/buildout
+script:
+ - bin/test
+after_success:
+ - bin/pip install -q coveralls python-coveralls
+ - bin/createcoverage
+ - coveralls
