@@ -1,0 +1,14 @@
+[buildout]
+extends = https://raw.github.com/collective/buildout.plonetest/master/test-5.1.x.cfg
+package-name = plone.formwidget.multifile
+package-extras = [tests]
+parts +=
+  createcoverage
+
+[createcoverage]
+recipe = zc.recipe.egg
+eggs = createcoverage
+
+[versions]
+coverage = 3.7
+
