@@ -15,11 +15,15 @@ setup(name='plone.formwidget.multifile',
           open(os.path.join("docs", "HISTORY.txt")).read(),
       classifiers=[
         "Programming Language :: Python",
+        "Programming Language :: Python :: 2.7",
+        "Framework :: Plone",
+        "Framework :: Plone :: 4.3",
+        "Framework :: Plone :: 5.0",
         ],
       keywords='',
       author='Jonas Baumann',
       author_email='j.baumann@4teamwork.ch',
-      url='http://github.com/plone/plone.formwidget.multifile',
+      url='https://github.com/plone/plone.formwidget.multifile',
       license='GPL',
       packages=find_packages(exclude=['ez_setup']),
       namespace_packages=['plone', 'plone.formwidget'],
